--- a/Assignments/module2solution.css
+++ b/Assignments/module2solution.css
@@ -1,4 +1,198 @@
-h{
-	color:red;
-	text-align: center;
+/*base styling*/
+*{
+box-sizing: border-box;
+margin:0px;
 }
+
+h1{
+	text-align: center;
+	color: black;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	font-size: 50px;
+	font-weight: bold;
+	font-family: sans-serif;
+}
+
+
+
+.d1,.d2,.d3{
+	background-color:gray;
+	border: 1px solid black;
+	border-radius: 5px;
+	margin: 20px;
+}
+
+.p1{
+	background-color: #D59898;
+	float: right;
+	width: 100px;
+	text-align: center;
+	font-weight: bold;
+	font-family: sans-serif;
+	border-left:1px solid black;
+	border-bottom:1px solid black;
+	border-radius: 5px;
+}
+.p2{
+	background-color: #C14543;
+	color: white;
+	float: right;
+	width: 100px;
+	text-align: center;
+	font-weight: bold;
+	font-family: sans-serif;
+	border-left:1px solid black;
+	border-bottom:1px solid black;
+	border-radius: 5px;
+}
+.p3{
+	background-color: #E5D198;
+	float: right;
+	width:100px;
+	text-align: center;
+	font-weight: bold;
+	font-family: sans-serif;
+	border-left:1px solid black;
+	border-bottom:1px solid black;
+	border-radius: 5px;
+}
+
+p{
+	padding: 10px;
+	clear: right;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+/*Responsive Layout*/
+
+
+/*Browser*/
+@media(min-width: 992px){.col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12{
+	float: left;}
+
+
+  .col-lg-1 {width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+}
+
+
+/*Tablet*/
+@media(min-width: 768px) and (max-width: 991px) {.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+  }
+  .col-md-1{
+	width: 8.33%}
+
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+/*Mobile*/
+@media(max-width: 767px){.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;}
+
+  .col-sm-1{
+    	width: 8.33%;}
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+}
+}
+
+
+
