--- a/Assignments/module2solution.css
+++ b/Assignments/module2solution.css
@@ -4,6 +4,10 @@ box-sizing: border-box;
 margin:0px;
 }
 
+.walkme-panel {
+display:none !important;
+}
+
 h1{
 	text-align: center;
 	color: black;
